Update email for data deletion requests

--- a/data-deletion.html
+++ b/data-deletion.html
@@ -1,7 +1,7 @@
 Data Deletion Instructions
 
 If you want your Facebook-related data removed from this app,
-email: your-email@domain.com
+email: emmardjohn15@gmail.com
 Subject: Data Deletion Request
 
 We will process requests within 30 days.
