Update privacy policy HTML structure and contact email

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,5 +1,10 @@
-Privacy Policy
-
-This app is used to display official cooperative Facebook page posts inside the member portal.
-We do not store personal Facebook data from users.
-For questions, contact: your-email@domain.com
+<!doctype html>
+<html>
+<head><meta charset="utf-8"><title>Privacy Policy</title></head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p>This app displays official cooperative Facebook page posts inside the member portal.</p>
+  <p>We do not store personal Facebook data from users.</p>
+  <p>Contact: your-email@example.com</p>
+</body>
+</html>
